ka1/kube1/services/paperless/paperless-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: paperless-https-gateway
  annotations:
    cert-manager.io/cluster-issuer: "clusterissuer-cloudflare-acme-prod" 
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "paperless.ka1.brodatzki.net"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: paperless-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      hostname: "paperless.ka1.brodatzki.net"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-http-to-https-redirect
spec:
  parentRefs:
    - name: paperless-https-gateway
      sectionName: http
  hostnames:
    - "paperless.ka1.brodatzki.net"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-service-route
spec:
  parentRefs:
    - name: paperless-https-gateway
      sectionName: https
  hostnames:
    - "paperless.ka1.brodatzki.net"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: paperless-paperless
          port: 8000
