ka1/kube1/services/paperless/paperless-tika.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
spec:
  ports:
    - port: 9998
  selector:
    app: paperless-tika
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-paperless-to-tika
spec:
  podSelector:
    matchLabels:
      app: paperless-tika
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: paperless-paperless
      ports:
        - protocol: TCP
          port: 9998
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: paperless-tika
spec:
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      hostname: paperless-tika
      containers:
        - name: paperless-tika
          image: docker.io/apache/tika:latest
